# FOMO

./: .env.example  .gitignore  MIGRATION.md  README.md  main.py  pyproject.toml  requirements.txt  tts.py
pinecone/: pinecone_db.py
rag/: __init__.py  chroma_store.py  pinecone_store.py  text_splitter.py
